[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/title-card.png" type="Texture" id=1]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/title_1.png" type="Texture" id=3]
[ext_resource path="res://assets/title_4.png" type="Texture" id=4]
[ext_resource path="res://assets/title_5.png" type="Texture" id=5]
[ext_resource path="res://assets/title_2.png" type="Texture" id=6]
[ext_resource path="res://assets/title_3.png" type="Texture" id=7]
[ext_resource path="res://assets/button_start.png" type="Texture" id=8]
[ext_resource path="res://assets/button_start_over.png" type="Texture" id=9]
[ext_resource path="res://assets/button_settings.png" type="Texture" id=10]
[ext_resource path="res://assets/button_settings_over.png" type="Texture" id=11]
[ext_resource path="res://assets/button_close.png" type="Texture" id=12]
[ext_resource path="res://assets/button_close_over.png" type="Texture" id=13]
[ext_resource path="res://animations/Intro_anim.tres" type="Animation" id=14]
[ext_resource path="res://audioogg/start.ogg" type="AudioStream" id=15]
[ext_resource path="res://audioogg/Super.ogg" type="AudioStream" id=16]
[ext_resource path="res://audioogg/click.ogg" type="AudioStream" id=17]
[ext_resource path="res://audioogg/Dino Contagion Boss Edition.ogg" type="AudioStream" id=18]
[ext_resource path="res://audioogg/loop_intro.ogg" type="AudioStream" id=19]

[node name="Background" type="TextureRect"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Logo-super" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -236.0
margin_top = 50.0
margin_right = 188.0
margin_bottom = 360.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 216, 230 )
texture = ExtResource( 3 )
expand = true

[node name="Logo-boss" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -504.0
margin_top = 332.0
margin_right = -168.0
margin_bottom = 473.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 252.555, 71.0832 )
texture = ExtResource( 4 )
expand = true

[node name="Logo-edition" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -184.0
margin_top = 345.0
margin_right = 304.0
margin_bottom = 493.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 163.811, 71.3083 )
texture = ExtResource( 5 )
expand = true

[node name="Logo-dino" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -570.0
margin_top = 174.0
margin_right = -170.0
margin_bottom = 368.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 200, 96 )
texture = ExtResource( 6 )
expand = true

[node name="Logo-contagion" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -161.0
margin_top = 166.0
margin_right = 569.0
margin_bottom = 395.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 311, 104 )
texture = ExtResource( 7 )
expand = true

[node name="Start" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -231.5
margin_top = -195.0
margin_right = 228.5
margin_bottom = 5.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 240, 100 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )

[node name="Settings" type="TextureButton" parent="."]
margin_left = 1740.0
margin_top = 914.0
margin_right = 1920.0
margin_bottom = 1081.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 88.549, 79.5392 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )

[node name="Close" type="TextureButton" parent="."]
margin_left = 1740.0
margin_top = 4.0
margin_right = 1920.0
margin_bottom = 183.0
rect_pivot_offset = Vector2( 88.549, 79.5392 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Intro"
anims/Intro = ExtResource( 14 )

[node name="FX-Title" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="FX-Super" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="FX-Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="FX-Start" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="Musiquita" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )

[node name="popups" type="Node2D" parent="."]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="finished" from="FX-Start" to="." method="_on_FXStart_finished"]
